LVE medicos CheckPoint